# Orbex

./: .env.example  .gitattributes  Cargo.toml  Dockerfile  README.md  docker-compose.yml  ethusdc.jsonl  justfile
.github/workflows/: ci.yml  release.yml
frontend/: .env.example
frontend/app/test-indexer/: page.tsx
frontend/components/: indexer-chart.tsx  trading-form.tsx
frontend/hooks/: use-simulated-candles.ts
indexer/: Cargo.toml  Dockerfile
indexer/db/migrations/: 001_create_trades.sql
indexer/src/: event_collector.rs  main.rs
indexer/src/api/: server.rs
indexer/src/api/handlers/: mod.rs  ohlcv_hand.rs  orderbook_hand.rs  trades_hand.rs  udf.rs
indexer/src/api/websocket/: messages.rs  mod.rs  ws_ohlcv.rs  ws_orderbook.rs  ws_unified.rs
indexer/src/indexer/: candle_aggregator.rs  event_collector.rs  mod.rs  order_extractor.rs  orderbook_reducer.rs  runtime.rs  trade_mapper.rs
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/assets/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/orderbook/src/: benchmarking.rs  engine.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  lib.rs
runtime/src/configs/: mod.rs
tradebot/: Cargo.toml  Dockerfile
tradebot/src/: main.rs
