
[workspace]
members = [
    "indexer",
    "node",
    "pallets/assets",
    "pallets/orderbook",
    "pallets/template",
    "runtime",
    "tradebot",
]
resolver = "2"
[workspace.package]
license = "MIT-0"
authors = ["Gil, Jo, Randall"]
homepage = "https://github.com/bahbah94/orderbook-pallets"
repository = "https://github.com/bahbah94/orderbook-pallets.git"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false }
chrono = { version = "0.4.42", default-features = false }
clap = { version = "4.5.51" }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
dotenvy = { version = "0.15.6" }
frame-benchmarking = { version = "43.0.0", default-features = false }
frame-benchmarking-cli = { version = "51.0.0", default-features = false }
frame-executive = { version = "43.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.11.0", default-features = false }
frame-support = { version = "43.0.0", default-features = false }
frame-system = { version = "43.0.0", default-features = false }
frame-system-benchmarking = { version = "43.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "39.0.0", default-features = false }
frame-try-runtime = { version = "0.49.0", default-features = false }
futures = { version = "0.3.31" }
hex = { version = "0.4.3" }
jsonrpsee = { version = "0.24" }
pallet-assets = { path = "./pallets/assets", default-features = false }
pallet-aura = { version = "42.0.0", default-features = false }
pallet-balances = { version = "44.0.0", default-features = false }
pallet-grandpa = { version = "43.0.0", default-features = false }
pallet-orderbook = { path = "./pallets/orderbook", default-features = false }
pallet-sudo = { version = "43.0.0", default-features = false }
pallet-template = { path = "./pallets/template", default-features = false }
pallet-timestamp = { version = "42.0.0", default-features = false }
pallet-transaction-payment = { version = "43.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "46.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "43.0.0", default-features = false }
sc-basic-authorship = { version = "0.52.0", default-features = false }
sc-cli = { version = "0.55.0", default-features = false }
sc-client-api = { version = "42.0.0", default-features = false }
sc-consensus = { version = "0.52.0", default-features = false }
sc-consensus-aura = { version = "0.53.1", default-features = false }
sc-consensus-grandpa = { version = "0.38.0", default-features = false }
sc-executor = { version = "0.45.0", default-features = false }
sc-network = { version = "0.53.0", default-features = false }
sc-offchain = { version = "48.0.0", default-features = false }
sc-service = { version = "0.54.0", default-features = false }
sc-telemetry = { version = "30.0.0", default-features = false }
sc-transaction-pool = { version = "42.0.0", default-features = false }
sc-transaction-pool-api = { version = "42.0.0", default-features = false }
scale-info = { version = "2.11.4", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
orbex-node = { path = "./node", default-features = false }
orbex-runtime = { path = "./runtime", default-features = false }
sp-api = { version = "39.0.0", default-features = false }
sp-application-crypto = { version = "43.0.0", default-features = false }
sp-block-builder = { version = "39.0.0", default-features = false }
sp-blockchain = { version = "42.0.0", default-features = false }
sp-consensus-aura = { version = "0.45.0", default-features = false }
sp-consensus-grandpa = { version = "26.0.0", default-features = false }
sp-core = { version = "38.1.0", default-features = false }
sp-genesis-builder = { version = "0.20.0", default-features = false }
sp-inherents = { version = "39.0.0", default-features = false }
sp-io = { version = "43.0.0", default-features = false }
sp-keyring = { version = "44.0.0", default-features = false }
sp-offchain = { version = "39.0.0", default-features = false }
sp-runtime = { version = "44.0.0", default-features = false }
sp-session = { version = "41.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-timestamp = { version = "39.0.0", default-features = false }
sp-transaction-pool = { version = "39.0.0", default-features = false }
sp-version = { version = "42.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
substrate-frame-rpc-system = { version = "47.0.0", default-features = false }
substrate-wasm-builder = { version = "29.0.0", default-features = false }
subxt = { version = "0.44.0" }
subxt-signer = { version = "0.44.0" }
tokio = { version = "1.48.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20" }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
