[package]
name = "orbex-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
chrono = { workspace = true }
deadpool-postgres = "0.14.1"
dotenvy = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "migrate",
    "rust_decimal",
] }
rust_decimal = { version = "1.36", features = ["serde"] }
subxt = { workspace = true }
subxt-signer = { workspace = true }
thiserror = "2.0.17"
tokio = { workspace = true, features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
