[package]
name = "orbex-tradebot"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
dotenvy = { workspace = true }
anyhow = { workspace = true }
flate2 = "1.1.5"
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
subxt = { workspace = true }
subxt-signer = { workspace = true, features = ["sr25519", "subxt"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
